--- a/index_prod.html
+++ b/index_prod.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <title>iView project</title>
+    <title>Simulay在线仿真系统</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <link rel="stylesheet" href="/dist/main.1a8cfb57cf45fe1bc9c4.css">
+    <link rel="stylesheet" href="/dist/main.00d221ac105541ed4cda.css">
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/dist/vendors.1a8cfb57cf45fe1bc9c4.js"></script>
-    <script type="text/javascript" src="/dist/main.1a8cfb57cf45fe1bc9c4.js"></script>
+    <script type="text/javascript" src="/dist/vendors.00d221ac105541ed4cda.js"></script>
+    <script type="text/javascript" src="/dist/main.00d221ac105541ed4cda.js"></script>
 </body>
 </html> 
