--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Simulay在线仿真系统</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <link rel="stylesheet" href="/dist/main.a9170801588f88b54618.css">
+    <link rel="stylesheet" href="/dist/main.css">
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/dist/vendors.a9170801588f88b54618.js"></script>
-    <script type="text/javascript" src="/dist/main.a9170801588f88b54618.js"></script>
+    <script type="text/javascript" src="/dist/vendors.js"></script>
+    <script type="text/javascript" src="/dist/main.js"></script>
 </body>
 </html> 
