--- a/container_prod.html
+++ b/container_prod.html
@@ -4,11 +4,11 @@
     <title>Simulay在线仿真系统</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
+    <link rel="stylesheet" href="/dist/main.ce1a7ed5b7408f2f7fb5.css">
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
-<script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[3] %>"></script>
+<script type="text/javascript" src="/dist/vendors.ce1a7ed5b7408f2f7fb5.js"></script>
+<script type="text/javascript" src=""></script>
 </body>
 </html>
